# regiveil

./: Cargo.toml  README.md  backup.md  build.ps1  build.rs  glossary.md
docs/: TODO.md
examples/: try_func.rs
registry/HKEY_CURRENT_USER/Software/Microsoft/Windows/CurrentVersion/Explorer/: Advanced.md
src/: app.rs  lib.rs  main.rs  old_registry.rs  registry.rs  system.rs
src/registry/: backend.rs  mod.rs
src/tweak/: loader.rs  schema.rs
src/ui/: category.rs  diff_view.rs  mod.rs  search.rs
tweaks/: explorer.toml  input.toml  network.toml  performance.toml  power.toml  privacy.toml  schema.md  security.toml  ui.toml
