[package]
name = "regiveil"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.2"
os_info = "3.14.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging"
] }
winreg = "0.56.0"

[build-dependencies]
winres = "0.1.12"
